# TeamOne

./: .gitignore  .python-version  LICENSE  MANIFEST.in  Makefile  README.md  burpee.json  burpeetemp.json  pushup.json  pyproject.toml  setup.py  single.json  squat_positions copy 2.json  squat_positions copy.json  squat_positions.json  squatv3.json
agent/: main.py  pyproject.toml
skillet/: requirements.txt
skillet/examples/: actuators.py  audio_test.py  camera.py  go_to_your_pos.py  go_to_zero.py  imu.py  led.py  microphone.py  move_all_joints_a_little.py  move_joint_a_little.py  print_joint_states.py  speaker.py  squat.py
skillet/setup/: maps.py  setup_id.py  setup_zeroing.py
sub_movements/: pushup_down.json  pushup_up.json  squat.json  squat_back.json  squat_forward.json  squat_midway.json  stand_up.json
tests/: test_actuators.py  test_camera.py  test_connections.py  test_imu.py  test_microphone.py  test_speaker.py
